2004-07-02  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/DbPrompter.py (SaveAsDbPrompter.change_suggested_name): 
	Add method; (SaveAsDbPrompter.chooser): Make dialog a class attribute.
	Connect handler to the filter change event; (get_new_filename): Make
	a module function (outside any class). 

	* src/DbPrompter.py: Handle package export.
	* src/plugins/WritePkg.py: Register with the new scheme.
	* src/plugins/ReadPkg.py: Minor cleanups.
	* src/WriteXML.py: Minor cleanups. 

2004-07-01  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py: disable find old "find" function
	* src/gramps.glade: enable TreeView find function
	* src/PeopleView.py: don't unselect a row if it isn't a valid person.

2004-06-30  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps_main.py (on_export_activate): Delegate work
	to DbPrompter.
	* src/WriteXML.py: Register with the new scheme.
	* src/DbPrompter.py (SaveAsDbPrompter): Add class.

2004-06-29  Don Allingham  <dallingham@users.sourceforge.net>
	* src/FamilyView.py: fix reordering of children
	* src/ChooseParents.py: get filters working again
	* src/AddSpouse.py: update display after addition of person
	* src/Utils.py: new id generation algorithm

2004-06-28  Don Allingham  <dallingham@users.sourceforge.net>
	* src/ChooseParents.py: fix parent selection
	* src/FamilyView.py: fix update of parents after selction
	* src/PeopleView.py: fix update of parents after selction
	* src/gramps_main.py: fix update of parents after selction
	* src/EditPerson.py: fix person id reference
	
2004-06-28  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/DbPrompter.py: Add new class for new, existing, and import
	prompters. Enable opening any format on the startup.
	* src/gramps_main.py: Use new DbPrompter classes.
	* src/ArgHandler.py: Use new DbPrompter classes.

	* src/plugins/WebPage.py (IndividualPage.write_urls): 
	Add function; (IndividualPage.create_page): use write_urls().

	* src/RelLib.py: gramps id fixes.